--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 31 19:12:24 WET 2025
-sdk.dir=C\:\\Users\\tiago\\AppData\\Local\\Android\\Sdk
+#Sat Feb 01 14:30:06 WET 2025
+sdk.dir=C\:\\Users\\Gabi\\AppData\\Local\\Android\\Sdk
