--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Feb 01 14:30:06 WET 2025
-sdk.dir=C\:\\Users\\Gabi\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\tiago\\AppData\\Local\\Android\\Sdk
